--- a/src/scss/molecules/_ind-description-list.scss
+++ b/src/scss/molecules/_ind-description-list.scss
@@ -39,7 +39,6 @@
   }
 
   &__title {
-    padding-bottom: 8px;
     font-size: 22px;
     font-weight: 700;
   }
